# docs/swagger.json
@@ -6,6 +6,11 @@
     "paths": {
         "/search": {
             "get": {
+                "security": [
+                    {
+                        "cookie": []
+                    }
+                ],
                 "description": "Query Meilisearch and return results",
                 "consumes": [
                     "application/json"
@@ -79,6 +84,11 @@
         },
         "/search/basic": {
             "get": {
+                "security": [
+                    {
+                        "cookie": []
+                    }
+                ],
                 "description": "Query All Index in Meilisearch and return results",
                 "consumes": [
                     "application/json"
@@ -138,6 +148,11 @@
         },
         "/search/final": {
             "get": {
+                "security": [
+                    {
+                        "cookie": []
+                    }
+                ],
                 "description": "Query All Index in Meilisearch and return results",
                 "consumes": [
                     "application/json"
